# IDSL-MCP-Server

./: Dockerfile  README.md  client.py  customListingMiddleware.py  generate_jwt.py  main.py  pyproject.toml  requirements.txt  scope.py  secure_fast_mcp.py  server.py  streamablehttp-server.py
tools/: __init__.py  calculator.py  calculus.py  echo.py
