[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "fastapi>=0.115.13",
    "fastapi-mcp>=0.3.4",
    "fastapi-websocket-rpc>=0.1.29",
    "fastmcp>=2.8.1",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
]
